login. Add PasswordBoxAssistant

--- a/Diagnosis.Client.App/Controls/FormParts/ConfirmPasswordControl.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/ConfirmPasswordControl.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
              d:DesignHeight="100"
              d:DesignWidth="300">
@@ -34,11 +35,11 @@
                     </Style>
                 </Label.Style>
             </Label>
-            <Border DataContext="{Binding IsWrongPassword}"
-                    Grid.Column="1">
+            <Border Grid.Column="1">
                 <PasswordBox x:Name="password"
-                             VerticalContentAlignment="Center"
-                             PasswordChanged="password_PasswordChanged" />
+                             diag:PasswordBoxAssistant.BindPassword="true"
+                             diag:PasswordBoxAssistant.BoundPassword="{Binding Path=Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             VerticalContentAlignment="Center" />
             </Border>
         </Grid>
         <Grid Margin="{StaticResource FormLineMargin}"
@@ -51,11 +52,11 @@
             </Grid.ColumnDefinitions>
 
             <Label Content="Повторите пароль" />
-            <Border DataContext="{Binding IsWrongPassword}"
-                    Grid.Column="1">
+            <Border Grid.Column="1">
                 <PasswordBox x:Name="passwordRepeat"
-                             VerticalContentAlignment="Center"
-                             PasswordChanged="password_PasswordChanged" />
+                             diag:PasswordBoxAssistant.BindPassword="true"
+                             diag:PasswordBoxAssistant.BoundPassword="{Binding Path=PasswordRepeat, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             VerticalContentAlignment="Center" />
             </Border>
         </Grid>
     </Grid>
