--- a/Diagnosis.Client.App/Controls/FormParts/ConfirmPasswordControl.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/ConfirmPasswordControl.xaml
@@ -38,7 +38,7 @@
             <Border Grid.Column="1">
                 <PasswordBox x:Name="password"
                              diag:PasswordBoxAssistant.BindPassword="true"
-                             diag:PasswordBoxAssistant.BoundPassword="{Binding Path=Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             diag:PasswordBoxAssistant.BoundPassword="{Binding Path=Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                              VerticalContentAlignment="Center" />
             </Border>
         </Grid>
@@ -55,7 +55,7 @@
             <Border Grid.Column="1">
                 <PasswordBox x:Name="passwordRepeat"
                              diag:PasswordBoxAssistant.BindPassword="true"
-                             diag:PasswordBoxAssistant.BoundPassword="{Binding Path=PasswordRepeat, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             diag:PasswordBoxAssistant.BoundPassword="{Binding Path=PasswordRepeat, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                              VerticalContentAlignment="Center" />
             </Border>
         </Grid>
