--- a/Diagnosis.Client.App/Screens/Login.xaml
+++ b/Diagnosis.Client.App/Screens/Login.xaml
@@ -47,7 +47,8 @@
 
                 <forms:ConfirmPasswordControl x:Name="passwords"
                                              Grid.Row="1"
-                                             Visibility="{Binding IsPasswordVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                                              DataContext="{Binding Passwords}"
+                                             Visibility="{Binding DataContext.IsPasswordVisible, ElementName=login, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
                 <Grid Visibility="{Binding IsRememberVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
                       Margin="{StaticResource FormLineMargin}"
