--- a/Diagnosis.Client.App/Controls/FormParts/ConfirmPasswordControl.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/ConfirmPasswordControl.xaml
@@ -4,10 +4,31 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:diag="http://schemas.smg.com/diagnosis"
+             xmlns:mahControls="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d"
              d:DesignHeight="100"
              d:DesignWidth="300">
-    <Grid>
+    <UserControl.Resources>
+        <Grid x:Key="DefaultCapsLockIcon"
+              x:Shared="False"
+              Background="{DynamicResource BlackBrush}"
+              Opacity="0.8"
+              Width="16"
+              Height="16">
+            <Grid.OpacityMask>
+                <VisualBrush>
+                    <VisualBrush.Visual>
+                        <Canvas Width="24"
+                                Height="24">
+                            <Path Data="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
+                                  Fill="Black" />
+                        </Canvas>
+                    </VisualBrush.Visual>
+                </VisualBrush>
+            </Grid.OpacityMask>
+        </Grid>
+    </UserControl.Resources>
+    <Grid>        
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
@@ -22,7 +43,8 @@
 
             <Label>
                 <Label.Style>
-                    <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
+                    <Style TargetType="Label"
+                           BasedOn="{StaticResource {x:Type Label}}">
                         <Setter Property="Content"
                                 Value="Пароль" />
                         <Style.Triggers>
@@ -39,6 +61,8 @@
                 <PasswordBox x:Name="password"
                              diag:PasswordBoxAssistant.BindPassword="true"
                              diag:PasswordBoxAssistant.BoundPassword="{Binding Path=Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                             mahControls:PasswordBoxHelper.CapsLockWarningToolTip="Нажата клавиша Caps Lock"
+                             mahControls:PasswordBoxHelper.CapsLockIcon="{StaticResource DefaultCapsLockIcon}"
                              VerticalContentAlignment="Center" />
             </Border>
         </Grid>
@@ -56,6 +80,7 @@
                 <PasswordBox x:Name="passwordRepeat"
                              diag:PasswordBoxAssistant.BindPassword="true"
                              diag:PasswordBoxAssistant.BoundPassword="{Binding Path=PasswordRepeat, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                             mahControls:PasswordBoxHelper.CapsLockWarningToolTip="Нажата клавиша Caps Lock"
                              VerticalContentAlignment="Center" />
             </Border>
         </Grid>
