help. Update hotkeys

--- a/Diagnosis.Client.App/Screens/Words.xaml
+++ b/Diagnosis.Client.App/Screens/Words.xaml
@@ -105,6 +105,7 @@
                             <ContextMenu>
                                 <!--WordsViewModel-->
                                 <MenuItem Header="Изменить..."
+                                          FontWeight="Bold"
                                           InputGestureText="F2"
                                           Command="{Binding EditCommand}" />
                                 <!--WordsListViewModel-->
